k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: esic-app-svc
spec:
  type: LoadBalancer
  selector:
    app: esic-app
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
